objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Active_Item_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current IIP Update</label>
        <referenceTo>Item_Update__c</referenceTo>
        <relationshipLabel>Items - Active</relationshipLabel>
        <relationshipName>Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_State_Adjustment__c</fullName>
        <label>Add_State_Adjustment</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <label>Aging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alcohol_Percentage__c</fullName>
        <description>The alcohol percentage of the product.</description>
        <inlineHelpText>The alcohol percentage of the product; this is half the proof amount.</inlineHelpText>
        <label>Alcohol Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>5.8</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>7.55</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>8.5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>9.1</fullName>
                </value>
                <value>
                    <fullName>9.2</fullName>
                </value>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>9.75</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>10.3</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>10.7</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>11.5</fullName>
                </value>
                <value>
                    <fullName>11.6</fullName>
                </value>
                <value>
                    <fullName>11.8</fullName>
                </value>
                <value>
                    <fullName>11.9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>12.1</fullName>
                </value>
                <value>
                    <fullName>12.2</fullName>
                </value>
                <value>
                    <fullName>12.3</fullName>
                </value>
                <value>
                    <fullName>12.5</fullName>
                </value>
                <value>
                    <fullName>12.6</fullName>
                </value>
                <value>
                    <fullName>12.7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocated_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocated Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appellation_Code__c</fullName>
        <formula>Geography__r.Code_Appellation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appellation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appellation__c</fullName>
        <formula>Geography__r.Appellation_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appellation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aroma__c</fullName>
        <label>Aroma</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backorders_Allowed__c</fullName>
        <label>Backorders Allowed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Unit_Volume_UOM__c</fullName>
        <label>Base Unit Volume UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                    <default>true</default>
                    <label>CS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Unit_Volume__c</fullName>
        <label>Base Unit Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Units_per_Case__c</fullName>
        <label>Base Units per Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Base_Units_per_Case</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Units_per_Kit_Pack__c</fullName>
        <label>Base Units per Kit/Pack</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Before_Default_Days__c</fullName>
        <label>Best Before Default Days</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beverage_Code__c</fullName>
        <label>Beverage Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Beverage_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bottle_Size_Dimensions__c</fullName>
        <formula>&quot; H &quot; &amp; TEXT(Item_Height_in_Inches__c) &amp; &quot; x &quot; &amp; &quot; W &quot; &amp; TEXT(Item_Width_in_Inches__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Size (Dimensions)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottle_UPC_Number__c</fullName>
        <description>UPC number for the saleable item.</description>
        <inlineHelpText>UPC number for the saleable item.</inlineHelpText>
        <label>Item UPC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottled_in_the_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottled in the US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottles_Per_Shipment__c</fullName>
        <label>Bottles Per Shipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bottles_per_Shipment_CIF__c</fullName>
        <formula>9/( Size_In_Liters__c )*1200</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottles per Shipment - CIF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bottles_per_Shipment_Warehouse__c</fullName>
        <formula>9/( Size_In_Liters__c )*825</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottles per Shipment - Warehouse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bottling_Date__c</fullName>
        <label>Bottling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branches__c</fullName>
        <label>Branches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2|PATERNO WINES INTERNATIONAL BS|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>222|NEW JERSEY WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>224|CALIFORNIA WAREHOUSE|00002|WH|0</fullName>
                </value>
                <value>
                    <fullName>18|TERLATO ARTISANS SPIRITS|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18222|NEW JERSEY WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>22416|DIRECT TO CONSUMER|00016|WH|0</fullName>
                </value>
                <value>
                    <fullName>18214|C. AMERICAN WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18216|MICHIGAN WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18217|MISSISSIPPI WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18221|CHICAGO WHSE (CHILLROOM)|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18223|IOWA WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18224|CALIFORNIA WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18225|N. HAMPSHIRE WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18226|RIVER CITY WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18227|MICHIGAN WAREHOUSE ALTERNATE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18228|WEST VIRGINIA WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18229|N.J. HANOVER WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18230|VERMONT WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18231|MAINE WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18232|VIRGINIA WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18233|OHIO (CINCINNATI) WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18234|DOLC IN COLUMBUS|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18235|TOLEDO OHIO WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18236|CLEVELAND OH WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18237|OREGON BAILMENT WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18238|LIVORNO WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18239|LASPEZIA WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18240|NORTH CAROLINA WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18241|ALABAMA BAILMENT WAREHOUSE|00018|WH|0</fullName>
                </value>
                <value>
                    <fullName>18243|MICHIGAN LCB|00018|WH|0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Code_Legal__c</fullName>
        <description>External Id for Ship-Compliant Product Id</description>
        <label>ShipCompliant Product Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Manager__c</fullName>
        <formula>Brand__r.Marketing_Manager__r.FirstName + &quot; &quot; + Brand__r.Marketing_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Items_Active</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Packed__c</fullName>
        <label>Bulk Packed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_Cs__c</fullName>
        <label>CIF / Cs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_Upcharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIF Upcharge</label>
        <referenceTo>CIF_Upcharge__c</referenceTo>
        <relationshipName>Items_Active</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Number__c</fullName>
        <label>Carrier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Height_in_Inches__c</fullName>
        <label>Case Height (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Length_in_Inches__c</fullName>
        <inlineHelpText>Length is the longest of the dimensions.</inlineHelpText>
        <label>Case Length (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Material__c</fullName>
        <label>Case Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrugated</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Size_Dimensions__c</fullName>
        <formula>&quot; H &quot; &amp; TEXT(Case_Height_in_Inches__c) &amp; &quot; x &quot; &amp; &quot; W &quot; &amp; TEXT(Case_Width_in_Inches__c) &amp; &quot; x &quot; &amp; &quot; L &quot; &amp; TEXT(Case_Length_in_Inches__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Size (Dimensions)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_UPC_Number_SCC__c</fullName>
        <description>UPC number for the case</description>
        <inlineHelpText>UPC number for the case</inlineHelpText>
        <label>Case UPC Number (SCC)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Weight__c</fullName>
        <label>Case Weight (in pounds)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Width_in_Inches__c</fullName>
        <label>Case Width (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Per_Layer_TIE__c</fullName>
        <label>Cases Per Layer (TIE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Per_Pallet__c</fullName>
        <formula>Cases_Per_Layer_TIE__c *  Layers_per_Pallet_Height__c</formula>
        <label>Cases Per Pallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Produced__c</fullName>
        <label>Cases Produced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catalog_Name__c</fullName>
        <description>Derived from Marketing Description. Populated by integration.</description>
        <inlineHelpText>Derived from Marketing Description. Populated by integration.</inlineHelpText>
        <label>Catalog Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Code_9__c</fullName>
        <label>Category Code 9</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_GL__c</fullName>
        <label>Category GL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Availability__c</fullName>
        <label>Check Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class of product based on the SGWS taxonomy classification system.</description>
        <inlineHelpText>Class of product based on the SGWS taxonomy classification system.</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closure_Type__c</fullName>
        <label>Closure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Cork</fullName>
                </value>
                <value>
                    <fullName>Screw Cap/Stevlin</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Crown Cap</fullName>
                </value>
                <value>
                    <fullName>Zork</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_classification__c</fullName>
        <label>Color (classification)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>RED</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>ROSE</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>WHITE</label>
                </value>
                <value>
                    <fullName>TAWNY-BROWN</fullName>
                </value>
                <value>
                    <fullName>BLACK</fullName>
                </value>
                <value>
                    <fullName>BLUE</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
                <value>
                    <fullName>MIXED PACKAGE</fullName>
                </value>
                <value>
                    <fullName>ORANGE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PINK</fullName>
                </value>
                <value>
                    <fullName>PURPLE</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>GOLDEN</fullName>
                </value>
                <value>
                    <fullName>AMBER</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>CLEAR - WATER</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_marketing_description__c</fullName>
        <label>Color (marketing description)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Date_Method__c</fullName>
        <label>Commitment Date Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Method__c</fullName>
        <label>Commitment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Color__c</fullName>
        <label>Container Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <label>Container Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glass Bottle</fullName>
                </value>
                <value>
                    <fullName>Can</fullName>
                </value>
                <value>
                    <fullName>Plastic Bottle</fullName>
                </value>
                <value>
                    <fullName>Tetra</fullName>
                </value>
                <value>
                    <fullName>Keg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted From...</label>
        <referenceTo>Item_Update__c</referenceTo>
        <relationshipLabel>Items - Active (Converted From...)</relationshipLabel>
        <relationshipName>Items_Active</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cork_Type__c</fullName>
        <description>Type of cork closure, based on SGWS values.</description>
        <inlineHelpText>Base Unit Closure Type must be &quot;Cork&quot; for these values to be valid, otherwise NA. Type of cork closure, based on SGWS values.</inlineHelpText>
        <label>Cork Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cork_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Costing_Comments__c</fullName>
        <label>Costing Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that costing was completed by Accounting</description>
        <inlineHelpText>Indicates that costing was completed by Accounting</inlineHelpText>
        <label>Costing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin_Code__c</fullName>
        <formula>Geography__r.Code_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Origin Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <formula>Geography__r.Country_of_Origin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Craft_Spirit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Craft Spirit?</description>
        <label>Craft Spirit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_New_Item_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XXCreate New Item Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currently_Being_Updated__c</fullName>
        <formula>IF(!isblank(Active_Item_Update__c),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently Being Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTC_Compliant_States__c</fullName>
        <description>Comma delimited string of state abbreviations where the item is compliant for Direct to Consumer shipping (ie &quot;IL, OH, NY, DC&quot;). Refreshed on a schedule through automated feed from ShipCompliant.</description>
        <inlineHelpText>Comma delimited string of state abbreviations where the item is compliant for Direct to Consumer shipping (ie &quot;IL, OH, NY, DC&quot;). Refreshed on a schedule through automated feed from ShipCompliant.</inlineHelpText>
        <label>DTC Compliant States</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTC_Uncorked_item__c</fullName>
        <description>None, DTC is for Winery, and UNC is for Uncorked.</description>
        <label>DTC or Uncorked item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>DTC</fullName>
                </value>
                <value>
                    <fullName>UNC</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_have_an_expiration_date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does this have an expiration date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dominant_Varietal__c</fullName>
        <label>Dominant Varietal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agiorgitiko</fullName>
                </value>
                <value>
                    <fullName>Aglianico</fullName>
                </value>
                <value>
                    <fullName>Albarino</fullName>
                </value>
                <value>
                    <fullName>Aligote</fullName>
                </value>
                <value>
                    <fullName>Arneis</fullName>
                </value>
                <value>
                    <fullName>Assyrtiko</fullName>
                </value>
                <value>
                    <fullName>Auxerrois</fullName>
                </value>
                <value>
                    <fullName>Barbera</fullName>
                </value>
                <value>
                    <fullName>Bordeaux Blend Red</fullName>
                </value>
                <value>
                    <fullName>Blend German Red</fullName>
                </value>
                <value>
                    <fullName>Blend German White</fullName>
                </value>
                <value>
                    <fullName>Aged Grappa</fullName>
                </value>
                <value>
                    <fullName>Languedoc Blend Red</fullName>
                </value>
                <value>
                    <fullName>Languedoc Blend White</fullName>
                </value>
                <value>
                    <fullName>Red Blend</fullName>
                </value>
                <value>
                    <fullName>White Proprietary Blend</fullName>
                </value>
                <value>
                    <fullName>Porto Blend</fullName>
                </value>
                <value>
                    <fullName>Provence Blend Red</fullName>
                </value>
                <value>
                    <fullName>Provence Blend White</fullName>
                </value>
                <value>
                    <fullName>Provence Rose Blend</fullName>
                </value>
                <value>
                    <fullName>Rhone Blend Red</fullName>
                </value>
                <value>
                    <fullName>Rhone Blend White</fullName>
                </value>
                <value>
                    <fullName>Tempranillo Blend</fullName>
                </value>
                <value>
                    <fullName>Veneto Blend Red</fullName>
                </value>
                <value>
                    <fullName>Veneto Blend White</fullName>
                </value>
                <value>
                    <fullName>Brachetto</fullName>
                </value>
                <value>
                    <fullName>Cabernet Franc</fullName>
                </value>
                <value>
                    <fullName>Cabernet Sauvignon</fullName>
                </value>
                <value>
                    <fullName>Carignane</fullName>
                </value>
                <value>
                    <fullName>Carmenere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <formula>CASE(Supplier_Currency__c,&quot;AUD&quot;,0.84, &quot;CAD&quot;,1, &quot;EUR&quot;,1.25,&quot;GBP&quot;,1.65,&quot;NZD&quot;,0.76, &quot;USD&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOB_Cs__c</fullName>
        <label>Warehouse / Cs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_City__c</fullName>
        <label>Warehouse Pickup City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_Name__c</fullName>
        <label>Warehouse Pickup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_Postal__c</fullName>
        <label>Warehouse Pickup Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_State__c</fullName>
        <label>Warehouse Pickup State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_Street__c</fullName>
        <label>Warehouse Pickup Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fanciful_Name_Legal__c</fullName>
        <label>Fanciful Name (Legal)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fermentation__c</fullName>
        <label>Fermentation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Availability_Date__c</fullName>
        <label>First Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_or_Variable_Lead_Time__c</fullName>
        <label>Fixed or Variable Lead Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>